--- a/_posts/thesis_chapters/2024-1-5-Gdps2.md
+++ b/_posts/thesis_chapters/2024-1-5-Gdps2.md
@@ -143,9 +143,6 @@ https://docs.google.com/document/d/19PafC_w_7uObYL4v86IGeeFZTw2yKxjHfP_k85rHk_s/
 ### On GDP as a germ-cell and unit of analysis - and chapter outline
 
 
-
-
-
 In the introduction, I outlined some of the broader challenges of sharing practice and research to practically support the learning of coding practices beyond the immediate context of the research in question. The choice of what scope of activity to examine in detail is relevant to this challenge. This chapter centres on an interpretation of the implementation of game design patterns (GDPs) as a unit of analysis or germ-cell of activity.  
 
 **Recap on design patterns**
@@ -154,8 +151,6 @@ Before engaging in OBSERVATIONs, to deepening our understanding of use of design
   -  design patterns in learning design which exist at different scopes of activity [@mcandrew_patterns_2006].(CHECK THIS)
   - how design patterns interplay with design principles and how the process relates to design based research  [@linn_science_2006].
   - previous uses of GDPs - by repenning and others to then relate them to this framing.
-
-
 
 <!-- While this concept of germ cell / unit of analysis a is more typically used in a larger scope of societal activity, the principles apply this smaller scope.  -For a study of this nature, too broad an analysis risks insufficient detail to allow replication, too narrow risks being overly context dependant and limiting the potential for wider application. -->
 
@@ -254,7 +249,7 @@ https://docs.google.com/document/d/1B7kFl5QsGV-oWtFWHLBIJNpa5GeYMlCntq31BnPAQT4/
 
 -->
 
-_Context:_ For the previous five minutes the parent and child dyad have faced a blockage of a glitch in the software which prevents their wider objective of adding game design pattern of adding keys and doors to their game. In short, in this pattern the users must collect a key and then navigate to a door to progress to the next level. The parent Suzanna has been trying many different things and changing things in the code while the child Olivia has been expressing boredom. In response, Suzanna has expressed frustration and irritation. Finally Suzanna suggests that Olivia asks the facilitator Mick for help to resolve the coding blockage.
+_Context:_ For the previous five minutes the parent and child dyad have faced a blockage of a glitch in the software which has prevented their wider objective of adding a game design pattern to the first level of their game of adding keys and doors, where players must collect a key and then navigate to a door to progress to the next level. The activity of this pair in this vignette is driven by their following a tutorial chapter in the text book. This chapter is included as appendix 5.x. The parent Suzanna has been making multiple changes to the code while the child Olivia has been expressing boredom. In response, Suzanna has expressed frustration and irritation. This vignetter starts when Suzanna suggests that Olivia asks the facilitator Mick for help to resolve the coding problem that is blocking their progress.
 
 INSERT VIGNETTE TABLE HERE
 
@@ -361,45 +356,50 @@ https://docs.google.com/document/d/19PafC_w_7uObYL4v86IGeeFZTw2yKxjHfP_k85rHk_s/
 
 ### Descriptive Commentary on Vignette A
 
-THIS COULD DO WITH REVISITING WITH A FOCUS - PERHAPS SPECIALIST LANGUAGE LIKE DOUBLE BIND / AGENCY - AND REMOVING PREFIGURING OF TOO MUCH DIVISION OF LABOUR AND DESIGNING FOR OTHERS
+LOOKING AT PERSONAL, INTERPERSONAL AND THEN CULTURAL ASPECTS.
 
-The activity of this pair in this vignette is driven by their following a tutorial chapter in the text book. This chapter is included as appendix 5.x.
+PERHAPS - REWRITE SOME OF THIS IN SANNINO TERMS OF AGENCY?
 
-MAKE SURE THERE IS A SCREENSHOT OF THE TEXT BOOK - PERHAPS NAVIGATING THE DROP DOWN MENU OF PATTERNS.
+**Personal**
 
-The key and door pattern is one of the harder ones to implement as it involves adding two new functions, which while simple enough, represent new code structures and thus this adds a new level of conceptual and practical complexity. This is reflected in the situation of feeling stuck that family found themselves in the first part of the session. The parent has taken on the role of solving harder code problems following  instructions carefully. The child is one of the younger participants when blockages occur she explores the room or to dwell on the periphery of other participants interactions. The parent then circumnavigates the conflict of her own hesitancy regarding asking for facilitator help by sending out her child to ask.
+The key and door pattern is one of the harder ones to implement as it involves adding two new functions, which while simple enough, represent new code structures and thus this adds a new level of conceptual and practical complexity.
+
+The implementation of a new game design pattern (GDP) involve adding new code to the game. The amount of code and/ changes needed varied depending on its complexity. Larger changes typically need more careful manipulation of code and subsequent debugging. For this pair, these more involved coding activities were beyond the ability of the child. The parent Suzanna has taken on the role of solving harder code problems and in doing so has built important proficiency in coding practice. These include which include; finding and comprehending supporting documentation, fluidly navigating between undertaking more advanced coding to implement new GDPs, playtesting and preparing the coding environment for more basic coding of her child.
+
+<!-- PERHAPS A SCREENSHOT OF THE TEXT BOOK - PERHAPS NAVIGATING THE DROP DOWN MENU OF PATTERNS.  -->
+
+**Inter Personal**
+
+The parent navigates this process skilfully and is able to incorporate the child's interests. She takes signals clearly to her child when the process returns certain design stages indicating that she is aware of the greater possibility for effective child input at these moments. After a blockage caused by debugging coding is removed, the parent immediately re-engages the child. The parent says "Did you see Suzanne?" and then prompts the child to play-test the game.
+
+The child is one of the younger participants when blockages occur she explores the room or to dwell on the periphery of other participants interactions. The parent then circumnavigates the conflict of her own hesitancy regarding asking for facilitator help by sending out her child to ask.
+
+While this pair structured the process of implementing new GDPs through careful use of documentation, alternate use of keyboard , adult facilitating and coding process responsive to the child's leat, other individuals and pairs approached the same objectives in diverse ways. The process of how participants divide the labour of creating a game between them is explored in relation to other participants later in this chapter.
 
 <!-- DIVISION ON LABOUR HERE - POSSIBLE DUPLICATE? -->
-
-REWRITE IN SANNINO TERMS.
-
-
-As well as the key and door pattern which has just been implemented, the child also wants to add additional levels to the game. In this and the previous sessions several young participants had added levels to their games and this GDP sparked discourse between participants. It is likely that this Suzanna's interest stems at least in part from observations of other participants games and this discourse.
 
 <!--
 The supporting resources are available here.
 https://en.flossmanuals.net/phaser-game-making-in-glitch/_full/#game-mechanic-keys-and-doors -->
-In addition to the use of GDPS as a framework to navigate the documentation and thus guide implementation by the adult, the child shows ongoing affective connection to the game making patterns. For example, one target game design pattern _Keys and Doors_ is repeated in a sing song voice by the child along with chivvying to the mother to get started on it. There is also awareness of and playfulness surrounding the conventions of a platformer game as a dynamic system in way which drives their work on the design and coding mechanics of the game.  An understanding of the game as a dynamic system is seen clearly in the parent’s alarm at the child’s deletion of all elements of hazard. This interaction shows the parent guiding the child to imagine the user experience [@wright_empathy_2008] through the use of terms from GDPs. The parent uses GDPs as a prompt that they are designing for others. The child has also thought ahead to this time of playtesting. Both child and parent make reference to the imagined player experiences. In the vignette above Suzanna mentions "it's no fun if their are no hazards". The response of Olivia "It is for me." indicates an awareness of the conventions and a desire to play against them. The child articulate her motivation to _surprise_ players.
 
-The implementation of a new GDP involve adding new code to the game. The amount of code and/ changes needed varied depending on its complexity. Larger changes typically need more careful manipulation of code and subsequent debugging. For this pair, these more involved coding activities were beyond the ability of the child.
 
-However the parent navigates this.
 
-After a blockage caused by debugging coding is removed, the parent immediately re-engages the child. The parent says "Did you see Suzanne?" and then prompts the child to play-test the game. The child is keen to both replicate the GDP of keys and doors in the second level and to add a new GDP of adding additional levels to the game.
-nOTE add? THIS CHAPTER EXPLORES DOL Later...
+**Cultural**
+
+As well as the key and door pattern which has just been implemented, the child also wants to add additional levels to the game. In this and the previous sessions several young participants had added levels to their games and this GDP sparked discourse between participants. It is likely that this Suzanna's interest stems at least in part from observations of other participants games and this discourse.
+
+
+In addition to the use of GDPS as a framework to navigate the documentation and thus guide implementation by the adult, the child shows ongoing affective connection to the game making patterns. For example, one target game design pattern _Keys and Doors_ is repeated in a sing song voice by the child along with chivvying to the mother to get started on it.
+
+There is also awareness of and playfulness surrounding the conventions of a platformer game as a dynamic system in way which drives their work on the design and coding mechanics of the game.  An understanding of the game as a dynamic system is seen clearly in the parent’s alarm at the child’s deletion of all elements of hazard. This interaction shows the parent guiding the child to imagine the user experience [@wright_empathy_2008] through the use of terms from GDPs. The parent uses GDPs as a prompt that they are designing for others. The child has also thought ahead to this time of playtesting. Both child and parent make reference to the imagined player experiences. In the vignette above Suzanna mentions "it's no fun if their are no hazards". The response of Olivia "It is for me." indicates an awareness of the conventions and a desire to play against them. The child articulate her motivation to _surprise_ players.
+
+This chapter now expands to represent this diversity of the coding and community practices of participants, focusing on their use of game design patterns.
+Later in the chapter this will be analysed for implications for researchers and d opportunities for educators.
 
 <!--
 MOVE TO DOL IF NEEDED
 
 For this child developed a cyclical pattern of alternation between higher and lower engagement with the coding processes based on lower engagement the period of time when her parent was problem solving code and higher engagement once it was implemention of the structural element was almost complete. Completion of the code implementation of a GDP allows for new possibilities in design dynamics using the same text matrix level design tool. This stage of working on a new GDP sustains the child's activity. The child shows high engagement at this stage outlining her plan for implementing the pattern in the process of designing their game. sPECIFICALLY SAYING X, Y Z. -->
-
-
-In the programme Suzanna has built important proficiency in coding practice, which include; finding and comprehending supporting documentation, fluidly navigating between undertaking more advanced coding to implement new GDPs, playtesting and preparing the coding environment for more basic coding of her child. The parent navigates this process skilfully and is able to incorporate the child's interests. She takes signals clearly to her child when the process returns certain design stages indicating that she is aware of the greater possibility for effective child input at these moments.
-
-While this pair structured the process of implementing new GDPs through careful use of documentation, alternate use of keyboard , adult facilitating and coding process responsive to the child's leat, other individuals and pairs approached the same objectives in diverse ways.
-
-This chapter now expands to represent this diversity of the coding and community practices of participants, focusing on their use of game design patterns.
-Later in the chapter this will be analysed for implications for researchers and d opportunities for educators.
 
 
 <!-- As the child progress from making changes to then testing them her engagement stays high. In this example, the process of playtesting also involves the child speaking and identification of modifications to and new GDPs to implement.
