on peronsal approp

--- a/_posts/thesis_chapters/2024-1-5-Gdps2.md
+++ b/_posts/thesis_chapters/2024-1-5-Gdps2.md
@@ -449,21 +449,16 @@ SHIFT THIS TO Methodolgy & SUMMARISE HERE -->
 <!-- - the media literacy practices of transfer between tools - similar to other studies - see guided participation papers -->
 
 
-## Personal Appropriation
 
-Limited in this study.
-EDIT DOWN THE FOLLOWING
+## The role of GDPs in the personal appropriation of computational, design and systems concepts
 
-### GDPs used to explore computational, design and systems concepts from a perspective of personal appropriation
-
-**Facilitators can use existing and planned GDPs to surface computational, design and systems concepts embedded in games.**
+ - Facilitators can use existing and planned GDPs to surface computational, design and systems concepts embedded in games
+ - and participants appropriate them
 
 
 <!-- While the contextual factors involved in this learning environment did not require alignment with a particular curriculum or external examination, computing, design and systems concepts have the potential to arise as part of the game making process. -->
 
 <!-- In particular, the facilitator has the ability to surface and to explore more abstract concepts present in the concrete application of code that have emerged organically from the participants drives to implement particular patterns.    -->
-
-
 
 <!--
 Toby to find patterns and to duplicate them in different situations.
@@ -471,21 +466,20 @@ Toby to find patterns and to duplicate them in different situations.
 <!--
  Also the knowledge of the GDP helps ability to recognise patterns in the code. Left / right -> Up / Down -->
 
-The process of reusing and modify code to create a computer game can surface both abstract and concrete computing concepts present in the concrete application of code that have emerged organically at different stages of the creative process. Especially Resnick's more concrete definitions.
+In the previous chapter, the use of a map of learning dimension in the studies design was examined in relation to contextual tensions relating to the motivations surrounding of curriculum concepts. This, while there is a lot of potential, building testable progress in  CT and other personal dimensions are not explored significantly in this study, but are explored extensively in other research as explored in the literature review.
 
-In the previous chapter, the use of a map of learning dimension in the studies design was examined in relation to contextual tensions relating to the motivations surrounding of curriculum concepts. This, while there is a lot of potential, building testable progress in  CT and other personal dimensions are not explored significantly in this study, but are explored extensively in other research as explored in the literature review.  
+The process of reusing and modify code to create a computer game can surface both abstract and concrete computing concepts present in the concrete application of code that have emerged organically at different stages of the creative process. Especially Resnick's more concrete definitions. This can help justify activities in formal contexts as per Bevan and Petrich's work on tinkering. However, in this learning context the motivations of the learners both children and adults differ from  formal schooling setting and its requirements of teaching to a curriculum and potential exam content. Thus as there was no external imposition, and no organic desire to explore more abstract concepts, I could trust my instincts as a facilitator to not detract attention from participants following an organic and flexible pattern of implementation, self-testing, improvement and playtesting.
 
-In summary - this research support x and y from the research.  
-
-In addition to not wanting to duplicate existing research I also noted my own caution about overloading learners with shifting and competing goals. My concern hinged on the potential disorientation of the learner that imposed shifts of focus may provoke. As learners shift between different stages of creation the object of their activity shifts from the larger goal of making an engaging game to a narrower goal of implementing a game design pattern to narrower still of completing one of several actions to complete the implementation of a GDP.
+I also noted my own caution about overloading learners with shifting and competing goals. My concern hinged on the potential disorientation of the learner that imposed shifts of focus may provoke. As learners shift between different stages of creation the object of their activity shifts from the larger goal of making an engaging game to a narrower goal of implementing a game design pattern to narrower still of completing one of several actions to complete the implementation of a GDP. I was more interested in community aspects and appropriation of use of GDPs
 
 <!-- In the language of activity theory the change of objective denotes is a shift in scope of the activity system. -->
 
-It is of value to examine the learning context and the motivations of the learners both children and adults. Unlike formal schooling setting there are requirements of teaching to a curriculum and potential exam content. Thus as there was no external imposition, and no organic desire to explore more abstract concepts, I could trust my instincts as a facilitator to not detract attention from participants following an organic and flexible pattern of implementation, self-testing, improvement and playtesting.
 
-Indeed following foundational literature of this study on CoP and CoL,  personal appropriation of practices and concepts is demonstrated in community activity through evolving peer practices. As explored previously pairs or individuals alternate between community playtesting and pair/individual design work. They share comments and the are guided in future design decisions by their interaction with the games of others.
+Following foundational literature of this study on CoP and CoL,  personal appropriation of practices and concepts is demonstrated in community activity through evolving peer practices. As explored previously pairs or individuals alternate between community playtesting and pair/individual design work. They share comments and the are guided in future design decisions by their interaction with the games of others.
 
 One to one instruction from facilitators was limited which encouraged the community to teach each other. The community of learners began to pitch in in their own ways and develop their own practices. Here learner agency is transformative not only of personal dimensions of learning but also the cultural setting, practices and tools available to learners. The process of playtesting other games allowed participants to share their on emerging interpretations of game making concepts like game feel and challenge without being directly taught. Further, the community sense of what is appropriate of fun evolves as mutually and therefore cannot be taught explicitly.
+
+In summary - this research support x and y from the other research.  
 
 In the area of product revision the repeated, solo, incremental changes of the details of implementation of game design patterns indicate a personal appropriation of concepts like game feel and challenge.
 
