MORE ON PERSONAL APP

--- a/_posts/thesis_chapters/2024-1-5-Gdps2.md
+++ b/_posts/thesis_chapters/2024-1-5-Gdps2.md
@@ -438,9 +438,6 @@ This chapter allows us to develop this direction to focus in on the way design p
 Acknowledging that these observation do not fall nearly into each of the three planes, I begin with with some observation on GDPs impact on personal knowledge construction then those observations oriented chiefly to interpersonal activity and then ending those oriented more to cultural focus. The sections are also influenced by activity system elements, in particular the use of tools and the emerging community norms and concepts.
 Design stages (as explored in chapter two) are also used to guide categorisation , although the discussion of this chapter points to a more complex pattern of design that those outlined in many design cycles.
 
-
-
-
 <!-- ### Using cultural, interpersonal & Personal Planes Analysis of use of GDPs
 SHIFT THIS TO Methodolgy & SUMMARISE HERE -->
 
@@ -452,8 +449,7 @@ SHIFT THIS TO Methodolgy & SUMMARISE HERE -->
 
 ## The role of GDPs in the personal appropriation of computational, design and systems concepts
 
- - Facilitators can use existing and planned GDPs to surface computational, design and systems concepts embedded in games
- - and participants appropriate them
+
 
 
 <!-- While the contextual factors involved in this learning environment did not require alignment with a particular curriculum or external examination, computing, design and systems concepts have the potential to arise as part of the game making process. -->
@@ -466,6 +462,9 @@ Toby to find patterns and to duplicate them in different situations.
 <!--
  Also the knowledge of the GDP helps ability to recognise patterns in the code. Left / right -> Up / Down -->
 
+ - Facilitators can use existing and planned GDPs to surface computational, design and systems concepts embedded in games
+ - participants appropriate concepts and feed them back into the community
+
 In the previous chapter, the use of a map of learning dimension in the studies design was examined in relation to contextual tensions relating to the motivations surrounding of curriculum concepts. This, while there is a lot of potential, building testable progress in  CT and other personal dimensions are not explored significantly in this study, but are explored extensively in other research as explored in the literature review.
 
 The process of reusing and modify code to create a computer game can surface both abstract and concrete computing concepts present in the concrete application of code that have emerged organically at different stages of the creative process. Especially Resnick's more concrete definitions. This can help justify activities in formal contexts as per Bevan and Petrich's work on tinkering. However, in this learning context the motivations of the learners both children and adults differ from  formal schooling setting and its requirements of teaching to a curriculum and potential exam content. Thus as there was no external imposition, and no organic desire to explore more abstract concepts, I could trust my instincts as a facilitator to not detract attention from participants following an organic and flexible pattern of implementation, self-testing, improvement and playtesting.
@@ -477,9 +476,14 @@ I also noted my own caution about overloading learners with shifting and competi
 
 Following foundational literature of this study on CoP and CoL,  personal appropriation of practices and concepts is demonstrated in community activity through evolving peer practices. As explored previously pairs or individuals alternate between community playtesting and pair/individual design work. They share comments and the are guided in future design decisions by their interaction with the games of others.
 
-One to one instruction from facilitators was limited which encouraged the community to teach each other. The community of learners began to pitch in in their own ways and develop their own practices. Here learner agency is transformative not only of personal dimensions of learning but also the cultural setting, practices and tools available to learners. The process of playtesting other games allowed participants to share their on emerging interpretations of game making concepts like game feel and challenge without being directly taught. Further, the community sense of what is appropriate of fun evolves as mutually and therefore cannot be taught explicitly.
+IS THIS RELATED TO GDPS AND PERSONAL APP?
+One to one instruction from facilitators was limited which encouraged the community to teach each other. The community of learners began to pitch in in their own ways and develop their own practices.
 
-In summary - this research support x and y from the other research.  
+<!-- Here learner agency is transformative not only of personal dimensions of learning but also the cultural setting, practices and tools available to learners. The process of playtesting other games allowed participants to share their on emerging interpretations of game making concepts like game feel and challenge without being directly taught. Further, the community sense of what is appropriate of fun evolves as mutually and therefore cannot be taught explicitly. -->
+
+However while this thesis focuses elsewhere the following observations from video data are in line with existing research in this area:
+- example one
+- Ex research support x and y from the other research.  
 
 In the area of product revision the repeated, solo, incremental changes of the details of implementation of game design patterns indicate a personal appropriation of concepts like game feel and challenge.
 
