--- a/_posts/thesis_chapters/2024-1-5-Gdps2.md
+++ b/_posts/thesis_chapters/2024-1-5-Gdps2.md
@@ -465,9 +465,21 @@ Toby to find patterns and to duplicate them in different situations.
  - Facilitators can use existing and planned GDPs to surface computational, design and systems concepts embedded in games
  - participants appropriate concepts and feed them back into the community
 
-In the previous chapter, the use of a map of learning dimension in the studies design was examined in relation to contextual tensions relating to the motivations surrounding of curriculum concepts. This, while there is a lot of potential, building testable progress in  CT and other personal dimensions are not explored significantly in this study, but are explored extensively in other research as explored in the literature review.
+In the previous chapter, the use of a map of learning dimension in the studies design was examined in relation to contextual tensions relating to the motivations surrounding of curriculum concepts.
 
-The process of reusing and modify code to create a computer game can surface both abstract and concrete computing concepts present in the concrete application of code that have emerged organically at different stages of the creative process. Especially Resnick's more concrete definitions. This can help justify activities in formal contexts as per Bevan and Petrich's work on tinkering. However, in this learning context the motivations of the learners both children and adults differ from  formal schooling setting and its requirements of teaching to a curriculum and potential exam content. Thus as there was no external imposition, and no organic desire to explore more abstract concepts, I could trust my instincts as a facilitator to not detract attention from participants following an organic and flexible pattern of implementation, self-testing, improvement and playtesting.
+The process of reusing and modify code to create a computer game can surface both abstract and concrete computing concepts present in the concrete application of code that have emerged organically at different stages of the creative process. Especially Resnick's more concrete definitions.
+The repeated, solo, incremental changes of the details of implementation of game design patterns indicate a personal appropriation of concepts like game feel and challenge.
+EXAMPLE/S:
+
+However, while there is a lot of potential, building testable progress in  CT and other personal dimensions are not explored significantly in this study, but are explored extensively in other research as explored in the literature review.
+
+While this thesis focuses elsewhere the following observations from video data are in line with existing research in this area:
+- example one
+- Ex research support x and y from the other research.  
+
+This can help justify activities in formal contexts as per Bevan and Petrich's work on tinkering. However, in this learning context the motivations of the learners both children and adults differ from  formal schooling setting and its requirements of teaching to a curriculum and potential exam content. Thus as there was no external imposition, and no organic desire to explore more abstract concepts.
+
+<!-- , I could trust my instincts as a facilitator to not detract attention from participants following an organic and flexible pattern of implementation, self-testing, improvement and playtesting. -->
 
 I also noted my own caution about overloading learners with shifting and competing goals. My concern hinged on the potential disorientation of the learner that imposed shifts of focus may provoke. As learners shift between different stages of creation the object of their activity shifts from the larger goal of making an engaging game to a narrower goal of implementing a game design pattern to narrower still of completing one of several actions to complete the implementation of a GDP. I was more interested in community aspects and appropriation of use of GDPs
 
@@ -481,11 +493,6 @@ One to one instruction from facilitators was limited which encouraged the commun
 
 <!-- Here learner agency is transformative not only of personal dimensions of learning but also the cultural setting, practices and tools available to learners. The process of playtesting other games allowed participants to share their on emerging interpretations of game making concepts like game feel and challenge without being directly taught. Further, the community sense of what is appropriate of fun evolves as mutually and therefore cannot be taught explicitly. -->
 
-However while this thesis focuses elsewhere the following observations from video data are in line with existing research in this area:
-- example one
-- Ex research support x and y from the other research.  
-
-In the area of product revision the repeated, solo, incremental changes of the details of implementation of game design patterns indicate a personal appropriation of concepts like game feel and challenge.
 
 
 
