--- a/_posts/thesis_chapters/2024-1-5-Gdps2.md
+++ b/_posts/thesis_chapters/2024-1-5-Gdps2.md
@@ -366,11 +366,10 @@ The key and door pattern is one of the harder ones to implement as it involves a
 
 The implementation of a new game design pattern (GDP) involve adding new code to the game. The amount of code and/ changes needed varied depending on its complexity. Larger changes typically need more careful manipulation of code and subsequent debugging. For this pair, these more involved coding activities were beyond the ability of the child. The parent Suzanna has taken on the role of solving harder code problems and in doing so has built important proficiency in coding practice. These include which include; finding and comprehending supporting documentation, fluidly navigating between undertaking more advanced coding to implement new GDPs, playtesting and preparing the coding environment for more basic coding of her child.
 
+
 <!-- PERHAPS A SCREENSHOT OF THE TEXT BOOK - PERHAPS NAVIGATING THE DROP DOWN MENU OF PATTERNS.  -->
 
-**Inter Personal**
-
-The parent navigates this process skilfully and is able to incorporate the child's interests. She takes signals clearly to her child when the process returns certain design stages indicating that she is aware of the greater possibility for effective child input at these moments. After a blockage caused by debugging coding is removed, the parent immediately re-engages the child. The parent says "Did you see Suzanne?" and then prompts the child to play-test the game.
+**Guided participation:** The parent takes action to involve her child in the design process when technical possible and to incorporate her child's interests. She signals clearly to her child when the process returns certain design stages indicating that she is aware of the greater possibility for effective child input at these moments. After a blockage caused by debugging coding is removed, the parent immediately re-engages the child. The parent says "Did you see Olivia?" and then prompts the child to play-test the game.
 
 The child is one of the younger participants when blockages occur she explores the room or to dwell on the periphery of other participants interactions. The parent then circumnavigates the conflict of her own hesitancy regarding asking for facilitator help by sending out her child to ask.
 
@@ -386,10 +385,9 @@ https://en.flossmanuals.net/phaser-game-making-in-glitch/_full/#game-mechanic-ke
 
 **Cultural**
 
-As well as the key and door pattern which has just been implemented, the child also wants to add additional levels to the game. In this and the previous sessions several young participants had added levels to their games and this GDP sparked discourse between participants. It is likely that this Suzanna's interest stems at least in part from observations of other participants games and this discourse.
+The child Olivia also wants to add additional levels to their game. In recent sessions several young participants had added new levels to their games, including Toby who added over twenty. This activity had sparked much discourse between participants. It is likely that this Olivia's interest stems in part from observations of other participants games and this discourse.
 
-
-In addition to the use of GDPS as a framework to navigate the documentation and thus guide implementation by the adult, the child shows ongoing affective connection to the game making patterns. For example, one target game design pattern _Keys and Doors_ is repeated in a sing song voice by the child along with chivvying to the mother to get started on it.
+The child shows ongoing affective connection to the game making patterns. For example, one target game design pattern _Keys and Doors_ is repeated in a sing song voice by the child along with chivvying to the mother to get started on it.
 
 There is also awareness of and playfulness surrounding the conventions of a platformer game as a dynamic system in way which drives their work on the design and coding mechanics of the game.  An understanding of the game as a dynamic system is seen clearly in the parent’s alarm at the child’s deletion of all elements of hazard. This interaction shows the parent guiding the child to imagine the user experience [@wright_empathy_2008] through the use of terms from GDPs. The parent uses GDPs as a prompt that they are designing for others. The child has also thought ahead to this time of playtesting. Both child and parent make reference to the imagined player experiences. In the vignette above Suzanna mentions "it's no fun if their are no hazards". The response of Olivia "It is for me." indicates an awareness of the conventions and a desire to play against them. The child articulate her motivation to _surprise_ players.
 
@@ -486,7 +484,7 @@ I also noted my own caution about overloading learners with shifting and competi
 <!-- In the language of activity theory the change of objective denotes is a shift in scope of the activity system. -->
 
 Following foundational literature of this study on CoP and CoL,  personal appropriation of practices and concepts is demonstrated in community activity through evolving peer practices.
-HOW exactly ? 
+HOW exactly ?
 As explored previously pairs or individuals alternate between community playtesting and pair/individual design work. They share comments and the are guided in future design decisions by their interaction with the games of others.
 
 IS THIS RELATED TO GDPS AND PERSONAL APP?
