--- a/_posts/thesis_chapters/2024-1-5-Gdps2.md
+++ b/_posts/thesis_chapters/2024-1-5-Gdps2.md
@@ -356,8 +356,6 @@ https://docs.google.com/document/d/19PafC_w_7uObYL4v86IGeeFZTw2yKxjHfP_k85rHk_s/
 
 ### Descriptive Commentary on Vignette A
 
-LOOKING AT PERSONAL, INTERPERSONAL AND THEN CULTURAL ASPECTS.
-
 PERHAPS - REWRITE SOME OF THIS IN SANNINO TERMS OF AGENCY?
 
 **Personal**
@@ -429,12 +427,9 @@ In ask/imagine stages parent and child are able  discuss storytelling, graphical
 
 <!-- NOTE:  this addresses HOW THESE FINDING ARE STRUCTURED. MOVE TO INTRO? -->
 
-The vignette illustrates the use of GDP in varied ways. To investigate different planes I draw on the Rogoff's concept for this chapter. Link back to LIT Review
 
-This chapter allows us to develop this direction to focus in on the way design patterns used are by parents, children and facilitators in in this emerging game making community.
-
-Acknowledging that these observation do not fall nearly into each of the three planes, I begin with with some observation on GDPs impact on personal knowledge construction then those observations oriented chiefly to interpersonal activity and then ending those oriented more to cultural focus. The sections are also influenced by activity system elements, in particular the use of tools and the emerging community norms and concepts.
-Design stages (as explored in chapter two) are also used to guide categorisation , although the discussion of this chapter points to a more complex pattern of design that those outlined in many design cycles.
+The following sections focus in on the way design patterns used by parents, children and facilitators in this emerging game making community. To present findings from video data, I draw on the Rogoff's three planes of analysis for this chapter [@rogoff_observing_1995]. Acknowledging that these observation do not fall nearly into each of the three planes, I cover observation on the use of GDPs relating to,in turn, personal knowledge, interpersonal activity and finally cultural activities. The sections are also influenced by activity system elements, in particular the use of tools and the emerging community norms and concepts.
+<!-- Design stages (as explored in chapter two) are also used to guide categorisation , although the discussion of this chapter points to a more complex pattern of design that those outlined in many design cycles. -->
 
 <!-- ### Using cultural, interpersonal & Personal Planes Analysis of use of GDPs
 SHIFT THIS TO Methodolgy & SUMMARISE HERE -->
@@ -443,11 +438,7 @@ SHIFT THIS TO Methodolgy & SUMMARISE HERE -->
 <!-- - Tools: Specifics on Code Playgrounds and Phaser and a Javascript framework -->
 <!-- - the media literacy practices of transfer between tools - similar to other studies - see guided participation papers -->
 
-
-
 ## The role of GDPs in the personal appropriation of computational, design and systems concepts
-
-
 
 
 <!-- While the contextual factors involved in this learning environment did not require alignment with a particular curriculum or external examination, computing, design and systems concepts have the potential to arise as part of the game making process. -->
